2009-07-02 romain
* Revert latest proxy field library simplification, as the design was not finalized.

2009-05-27 Seb
* Add Site Message and Acknowledgements

2009-05-23 JPS
* Tickets can specialise a Trade Condition

2009-05-18 yusei
* Fix some proxy fields. count_method should not be inherited from template field and proxy_listbox_ids had to be copied to new proxified fields but it was not copied.

2009-05-13 yusei
* Fix Event_view.my_text_content due to the core field library issue.
* Add a template field for Editor Field to Base_viewCRMFieldLibrary.

2009-05-08 yusei
* Simplify field libraries and proxy fields. Old field libraries are kept for backward compatibility.
* Update dependencies.

2009-04-18 Kazuhiko
* Version 5.4.1

2009-04-17 nicolas
* Extend Entity_viewEventList to support displaying of Suport Requests

2009-03-02 yusei
* Bug fixed. Recipients of ingested email should be set to destination category on event.

2008-11-13 yusei
* Start to develop version 5.4.

2008-10-30 rafael
* Added Marked Posted transition for new messages.

2008-10-24 yusei
* Fixed EventModule_getEventDetailedReportSectionList. Since All messages will be translated in a template, no need to translate in this script.

2008-10-14 yusei
* Start to develop version 5.3.

2008-10-7 yusei
* Update some field titles for translation.

2008-10-1 yusei
* Added comment to Event_createRespondEvent.
* Changed label message on acknowledge action dialog.
* Changed action box name title of validate_action transition on sale_opportunity_workflow.
* Description field on Ticket_viewNewEventDialog is not required now.
* Assignee can see the new incoming event worklist.

2008-09-26 yusei
* Fixed unauthorized error bug if deleted events exists.

2008-9-25 yusei
* Update xml format.

2008-09-07 yusei
* Update English messages.

2008-09-04 yusei
* Update English messages.

2008-08-29 yusei
* Correct message text.

2008-08-28 yusei