@@ -13,14 +13,14 @@
             <key> <string>delegated_list</string> </key>
             <value>
               <list>
-                <string>title</string>
-                <string>lines</string>
-                <string>columns</string>
                 <string>all_columns</string>
-                <string>search_columns</string>
-                <string>sort_columns</string>
-                <string>selection_name</string>
+                <string>columns</string>
                 <string>editable_columns</string>
+                <string>lines</string>
+                <string>search_columns</string>
+                <string>selection_name</string>
+                <string>sort_columns</string>
+                <string>title</string>
               </list>
             </value>
         </item>
@@ -147,7 +147,7 @@
                         </tuple>
                         <tuple>
                           <string>source_title</string>
-                          <string>Handler</string>
+                          <string>Operations Manager</string>
                         </tuple>
                         <tuple>
                           <string>destination_title</string>
@@ -236,7 +236,7 @@
                         </tuple>
                         <tuple>
                           <string>source_title</string>
-                          <string>Handler</string>
+                          <string>Operations Manager</string>
                         </tuple>
                         <tuple>
                           <string>delivery.start_date</string>
@@ -318,7 +318,7 @@
                         </tuple>
                         <tuple>
                           <string>source_title</string>
-                          <string>Handler</string>
+                          <string>Operations Manager</string>
                         </tuple>
                         <tuple>
                           <string>destination_title</string>
@@ -405,7 +405,7 @@
                         </tuple>
                         <tuple>
                           <string>source_title</string>
-                          <string>Handler</string>
+                          <string>Operations Manager</string>
                         </tuple>
                         <tuple>
                           <string>destination_title</string>
