@@ -346,7 +346,7 @@
                         </tuple>
                         <tuple>
                           <string>source</string>
-                          <string>Handler</string>
+                          <string>Operations Manager</string>
                         </tuple>
                         <tuple>
                           <string>start_date</string>
@@ -437,6 +437,10 @@
                     <value> <int>0</int> </value>
                 </item>
                 <item>
+                    <key> <string>hide_rows_on_no_search_criterion</string> </key>
+                    <value> <int>0</int> </value>
+                </item>
+                <item>
                     <key> <string>lines</string> </key>
                     <value> <int>20</int> </value>
                 </item>
@@ -475,6 +479,10 @@
                 <item>
                     <key> <string>report_tree</string> </key>
                     <value> <int>0</int> </value>
+                </item>
+                <item>
+                    <key> <string>row_css_method</string> </key>
+                    <value> <string></string> </value>
                 </item>
                 <item>
                     <key> <string>search</string> </key>
